# biliZimu

./: .env.example  .gitignore  CHANGELOG.md  CURRENT_STATUS.md  LICENSE  QUICK_START.md  README.md  README_简单使用.md  findings.md  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  review.py  task_plan.md  下载字幕.py  使用指南.md  安装.bat
.hypothesis/constants/: 045132bfde082aa8  39cb1a7886d9dfb0  502c2221f83bf276  52644130ae7d6f18  766ee030436e972a  79c93ce197c8f88c  7e5dfcae8b644971  81f6aa3805ad47b8  8263bcfd08c53117  85f6342516df02a9  870949d0987fb620  8a0c80ec8f1764e6  8d7492624a118735  8eab2bdc9bedb03d  912cb5e51c251374  968c41229098e5d3  9b68c53aa1a67ca5  b06871da06db1901  bbb476b7f52959eb  bbb8828ec0c93c89  bc371af82920adf5  cd86f23ec3ceb7a9  cdb4332cde173e79  d2d66c49b1c45a32  dad8ae067c9c09b5  de47c402a199fa4b  e15dc61c428abe45  e7b1c2430fbcf6fd  f7dcfe0e04e71b1c  fcb31898b6c9668b
config/: default_config.yaml  example_config.yaml
docs/: .gitkeep  AI_SUBTITLE_ANALYSIS.md  BBDOWN_PATH_FIX.md  CLEANUP_PLAN.md  COOKIE_GUIDE.md  CURRENT_STATUS.md  EPISODE_DRAFT_LLM_SETUP.md  FUNASR_MODEL_MIGRATION.md  HANDOFF_2026-03-13.md  INSTALLATION_GUIDE.md  PROJECT_STRUCTURE.md  SUBBATCH_REFERENCE.md  SUBTITLE_FETCHING_ARCHITECTURE.md  USER_GUIDE_CACHE_ISSUE.md  WBI_IMPLEMENTATION_GUIDE.md  WBI_SIGNATURE_ANALYSIS.md  WBI_SIGNATURE_README.md  episode_workflow.md
samples/: episode_2019-11-07.sample.json
templates/: episode_template.json
test_temp/: download_subtitle_final.py  test_ai_subtitle_with_cookie.py  test_cookie_and_ai_subtitle.py  test_download_subtitle.py  test_improved_api.py  test_multiple_videos.py  test_real_subtitle_download.py  test_subtitle_download_interactive.py  test_wbi_api_debug.py
tests/: __init__.py  test_core_functionality.py  test_episode_draft.py  test_review_export.py  test_setup.py  test_validation.py
(+327 files in other folders)
